Correct alignment

--- a/assets/scss/molecules/_breadcrumb.scss
+++ b/assets/scss/molecules/_breadcrumb.scss
@@ -1,14 +1,14 @@
 //_breadcrumb.scss
 
 .breadcrumb {
-  background: $text-colour;
+  background: $toc-colour;
   border-bottom: 1px solid $tile-border-colour;
   border-radius: 0;
   color: $light-gray;
   padding: 16px 0 12px 0;
 
   a {
-    color: $white;
+    color: $text-colour;
     border-bottom: 1px solid $light-gray;
     padding-bottom: 1px;
 
