--- a/assets/scss/molecules/_footer.scss
+++ b/assets/scss/molecules/_footer.scss
@@ -7,11 +7,12 @@
 
   &--list {
     margin-top: 28px;
+    padding-left: 0;
     > li {
       display: inline-block;
       height: 25px;
-      margin-top: 10px;
-      padding: 1px 15px;
+      margin-top: 30px;
+      padding: 1px 15px 0 0;
       border-right: 1px solid $text-colour;
       &:last-of-type {
         border-right: 0 solid $text-colour;
