--- a/assets/scss/molecules/_main-content.scss
+++ b/assets/scss/molecules/_main-content.scss
@@ -1,6 +1,10 @@
 //_main-content.scss
 
 .dit-main-content {
+  &__body {
+    padding-left: 0;
+  }
+
   h2 {
     font-size: 40px;
     font-weight: 100;
