--- a/assets/scss/molecules/_stepwizard.scss
+++ b/assets/scss/molecules/_stepwizard.scss
@@ -56,6 +56,7 @@
 
 .form-group {
   margin-bottom: 25px;
+  padding-left: 0;
 
   &__button {
     margin-bottom: 0;
